FIX shift on a elements

--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -4,6 +4,7 @@
   // background-color: gold;
   position: fixed;
   font-family: constants.$secondaryFont;
+  font-size: 28px;
   width: 100%;
 }
 .nav ul {
@@ -23,11 +24,11 @@
 .nav li a {
   padding: 20px;
   text-decoration: none;
+  // text-shadow: 0 0 1px black;
 }
 .nav li a:visited {
   color: inherit;
 }
 .nav li a:hover {
-  color: #ddd;
-  text-decoration: underline;
+  -webkit-text-stroke: 1px black;
 }
